@@ -3,11 +3,15 @@
  
   <groupId>com.qrypt</groupId>
   <artifactId>random-provider-project</artifactId>
-  <version>1</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   
   <modules>
     <module>random-provider</module>
+      <module>random-provider-docker2</module>
+      <module>random-provider-initializer</module>
+      <module>random-provider-demo2-war</module>
+
   </modules>
   
 
@@ -16,24 +20,39 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.13.2</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-inline</artifactId>
         <version>5.2.0</version>
-        <scope>compile</scope>      
+        <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
         <version>5.12.0</version>
-        <scope>compile</scope>
+        <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.11.0</version>
     </dependency>
+
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>1.7.36</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-simple</artifactId>
+          <version>1.7.36</version>
+          <scope>test</scope>
+      </dependency>
   </dependencies>
 
   <build>
@@ -41,11 +60,16 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.10.1</version> <!-- Use the latest version -->
+            <version>3.13.0</version> <!-- Use the latest version -->
             <configuration>
                 <source>11</source>
                 <target>11</target>
-                <release>11</release> <!-- Optional, ensures compatibility -->
+<!--                <release>11</release> &lt;!&ndash; Optional, ensures compatibility &ndash;&gt;-->
+                <compilerArgs>
+                    <arg>--add-exports</arg>
+                    <arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
+                    <!-- include additional args here -->
+                </compilerArgs>
             </configuration>
         </plugin>    
         <plugin>
@@ -83,8 +107,14 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>3.0.0-M9</version> <!-- Use the latest version -->
+<!--            <configuration>-->
+<!--                <argLine>-Dnet.bytebuddy.experimental=true</argLine>-->
+<!--            </configuration>-->
             <configuration>
-                <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                <!-- Specify the custom java.security file -->
+                <systemPropertyVariables>
+                    <java.security.properties>${project.basedir}/src/test/resources/custom.java.security</java.security.properties>
+                </systemPropertyVariables>
             </configuration>
         </plugin>                
     </plugins>
